--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     >
-    <title>leovegas</title>
+    <title>dule</title>
   </head>
   <body>
     <noscript>
